<resources>
    <string name="delete_label">Delete</string>
    <string name="set_end_time_label">Stop</string>
    <string name="name_label">Name</string>
    <string name="weight_label">Weight in pounds</string>
    <string name="height_in_centimeters_label">Height in Centimeters</string>
    <string name="save_label">Save</string>
    <string name="accept_label">Accept</string>
    <string name="cancel_label">Cancel</string>
    <string name="delete_record_confirmation_message">Are you sure you want to delete this record?</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sleep_records_label">Sleep Records</string>
    <string name="size_records_label">Size Records</string>
    <string name="profile_label">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_register_a_baby_label">Please register a baby</string>
    <string name="birthday_label">Birthday</string>
    <string name="title_activity_add_size_record">AddSizeRecordActivity</string>
    <string name="when_the_measurement_was_made_label">When the measurement was made</string>
    <string name="no_size_records">You do not have any size records \n please press add  to create a new size records</string>
    <string name="delete_size_record_confirmation_message">Are you sure you want to delete this size record?</string>
    <string name="record_title">Records</string>
    <string name="size_records_title">Size Records</string>
    <string name="baby_profile_title">Baby Profile</string>
    <string name="sleep_record_label">Sleep Record</string>
    <string name="feed_record">Feed Record</string>
    <string name="select_a_date_to_create_a_record_label">Select a date to create a record</string>
    <string name="records_message_instruction">Select a date to create/watch a record</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="edit_end_time_label">Edit</string>
    <string name="end_time_lower_than_start_time_message">The end time and date  of the records should be greater than start time</string>
</resources>
