<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mSRLAddSizeRecord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="co.com.babyrecord.create_or_edit_baby.CreateOrEditBabyActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/mTILWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/weight_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mETWeight"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/mTILHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/height_in_centimeters_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mTILWeight">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mETHeight"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mTILDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/when_the_measurement_was_made_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mTILHeight">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mETDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </android.support.design.widget.TextInputLayout>


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>
