<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mSRLProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mLLNoBabyMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_person" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/please_register_a_baby_label" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/mCLBabyInfo"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mTVName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:text="@string/name_label"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/mTVBirthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:text="Birthday"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTVName" />


            <TextView
                android:id="@+id/mTVWeigth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:text="@string/weight_label"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTVBirthday" />


            <TextView
                android:id="@+id/mTVHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:padding="16dp"
                android:text="@string/height_in_centimeters_label"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTVWeigth" />

            <TextView
                android:id="@+id/mTVAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:padding="16dp"
                android:text="Age"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTVHeight" />



        </android.support.constraint.ConstraintLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/mFabCreateBaby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>
